fix(purchase portal page): Elements shifting to the side
- Fix a styling bug where the purchase request item shifts to the left,
and the card underneath shifts to the right, when the purchase request
item is clicked.

--- a/public/stylesheets/purchase-portal/purchase-portal.css
+++ b/public/stylesheets/purchase-portal/purchase-portal.css
@@ -138,10 +138,6 @@
   margin: 10px 0 20px 0;
 }
 
-.collapse-container__request-info {
-  margin-left: 20px;
-}
-
 .new-purchase-form,
 .purchase-request-form {
   display: flex;
@@ -188,10 +184,10 @@
     width: 500px;
   }
 
-.requested-purchases__title {
-  margin-left: 20px;
-  padding-bottom: 5px;
-  width: 90%;
+  .requested-purchases__title {
+    margin-left: 20px;
+    padding-bottom: 5px;
+    width: 90%;
   }
 
   .collapse-container {
